--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build & aws s3 cp build/ s3://mytestingenv.xyz --recursive"
+    "deploy": "npm run build && aws s3 cp build/ s3://mytestingenv.xyz --recursive"
   },
   "eslintConfig": {
     "extends": "react-app"
